<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WearOS AI</string>
    <string name="settings">Settings</string>
    <string name="api_key">API Key</string>
    <string name="api_url">API URL</string>
    <string name="model_name">Model Name</string>
    <string name="system_prompt">System Prompt</string>
    <string name="enter_prompt">Enter your prompt...</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="response">Response</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="settings_saved">Settings saved</string>
    <string name="configure_settings">Please configure API settings first</string>
</resources>
